# glfwRenderer

./: .gitignore  CMakeLists.txt  main.cpp
headers/components/: component.hpp  texture.hpp
headers/core/: renderer.hpp  shader.hpp  window.hpp  world.hpp
headers/managers/: fileManager.hpp  resourceManager.hpp
headers/math/: math.hpp  vec2.hpp  vec3.hpp
headers/objects/: mesh.hpp  model.hpp  object.hpp
headers/objects/predefined/: triangle.hpp
headers/resources/: image.hpp
headers/utilities/: typeHandler.hpp
shaders/: objShader.frag  objShader.vert
sources/components/: component.cpp  texture.cpp
sources/core/: renderer.cpp  shader.cpp  window.cpp  world.cpp
sources/managers/: fileManager.cpp  resourceManager.cpp
sources/objects/: model.cpp  object.cpp
sources/objects/predefined/: triangle.cpp
sources/resources/: image.cpp
